--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,18 +16,23 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Auth GCP
+        id: auth
         uses: google-github-actions/auth@v2
         with:
           workload_identity_provider: ${{ vars.WORKLOAD_IDENTITY_PROVIDER }}
           service_account: ${{ vars.DOCKER_SERVICE_ACCOUNT }}
+          token_format: 'access_token'
 
-      - name: Setup Docker
-        uses: docker/setup-buildx-action@v3
-
-      - name: Auth Docker Registry
-        run: gcloud auth configure-docker us-central1-docker.pkg.dev --quiet
+      - name: Login to Artifact Registry
+        uses: docker/login-action@v3
+        with:
+          registry: us-central1-docker.pkg.dev
+          username: oauth2accesstoken
+          password: ${{ steps.auth.outputs.access_token }}
 
       - name: Build and Push
-        run: |
-          docker build -t us-central1-docker.pkg.dev/visualitycs-infra/visualytics-docker/sample:${{ github.sha }} .
-          docker push us-central1-docker.pkg.dev/visualitycs-infra/visualytics-docker/sample:${{ github.sha }}
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: us-central1-docker.pkg.dev/visualitycs-infra/visualytics-docker/sample:${{ github.sha }}
